Correction problème alignement + bugs

--- a/css/coromon-pv-dark.css
+++ b/css/coromon-pv-dark.css
@@ -54,19 +54,25 @@
 .result{
     height:15rem;
     width:10rem;
-    padding-top:0.5rem;
+    padding-left:0rem;
     text-align: center;
     font-size: 7.5rem;
     background-color: rgb(42, 42, 42);
-    display:none;
 }
-.result input{
-    width:8rem;
+
+.result span{
     height: 13.5rem;
-    border:none;
     text-align: center;
     background-color: rgb(42, 42, 42);
     color:#d8d8d8;
+}
+
+.pvTitle{
+    color: #a8a8a8;
+    font-size:1rem;
+    width:4rem;
+    padding-top:0;
+    margin:0 auto 0 auto;
 }
 
 .theme-dark{
